--- a/src/components/navbar/styleNavbar.css
+++ b/src/components/navbar/styleNavbar.css
@@ -11,3 +11,11 @@
 	padding: 10px;
 }
 
+.logo {
+	width: 50px;
+	height: 45px;
+	border-radius: 50%;
+	position: absolute;
+	top: 8px;
+	right: 20px;
+}
