--- a/src/pages/products/styleProductList.scss
+++ b/src/pages/products/styleProductList.scss
@@ -21,6 +21,16 @@
 				font-weight: 600;
 				color: red;
 				cursor: pointer;
+				margin-right: 5px;
+			}
+
+			a{
+				background-color: transparent;
+				border: none;
+				outline: none;
+				font-weight: 600;
+				color: rgb(77, 204, 45);
+				cursor: pointer;
 			}
 		}
 
