--- a/src/pages/products/styleProductList.scss
+++ b/src/pages/products/styleProductList.scss
@@ -2,6 +2,18 @@
 	text-align: center;
 	margin-top: 50px;
 
+	input{
+		padding: 4px;
+		width: 22rem;
+		margin: 0 0 10px 0;
+		outline: none;
+	}
+
+	h1{
+		margin-top: 8px;
+		color: red;
+	}
+
 	h3{
 		margin: 0 0 20px 0;
 	}
